# cpi-token-onchain-sample

./: .gitpod.Dockerfile  .gitpod.yml  Anchor.toml  README.md  package.json  setup-helper.sh
app/: README.md  config-overrides.js  package.json
app/public/: index.html
app/src/: App.tsx
app/src/anchor/idl/: cpi_token_onchain_sample.json
app/src/anchor/types/: cpi_token_onchain_sample.ts
app/src/components/: CreateTokenAccount.tsx  EscrowTransferToken.tsx  Wallet.tsx  WalletButton.tsx
data/: .gitignore
programs/cpi-token-onchain-sample/: Cargo.toml
programs/cpi-token-onchain-sample/src/: lib.rs  main.rs
tests/: cpi-token-onchain-sample.ts
tests/fixtures/: create_token_account_in.txt
