[package]
name = "cpi-token-onchain-sample"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_token_onchain_sample"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
# anchor-lang = "0.25.0"
# anchor-spl = "0.25.0"
spl-token = "3.3.0"
ctsi_sol ={ path = "../../../rollups-examples/solana-adapter/ctsi_sol"}
